<resources>
    <string name="app_name">The Movie DB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login_text_view">Log in to access your account settings.</string>
    <string name="Login_enter_email">Enter your Email address</string>
    <string name="Login_enter_password">Enter your password</string>
    <string name="Login_button_confirm">Login</string>
    <string name="Register_text_view">Register to continue</string>
    <string name="Register_text_name">Name</string>
    <string name="Register_text_surname">Surname</string>
    <string name="Not_Register">Not register?</string>
    <string name="Register_text_password">Password</string>
    <string name="Register_text_confirm_password">Confirm password</string>
    <string name="Register_text_email">Email</string>
    <string name="Register_button_confirm">Register</string>
    <string name="username">Username</string>
    <string name="logout">Log out</string>
    <string name="Settings">Settings</string>
    <string name="Movies">Movies</string>
    <string name="People">People</string>
    <string name="orLogin">Or login</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="Description">Description</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
</resources>